--- a/src/components/loader.css
+++ b/src/components/loader.css
@@ -26,3 +26,10 @@
      transform: rotate(1turn);
   }
 }
+.page-loader{
+  height:100vh;
+  width:100vw;
+  display:flex;
+  align-items: center;
+  justify-content: center;
+}
