--- a/src/components/landing-page.css
+++ b/src/components/landing-page.css
@@ -1,37 +1,25 @@
 .landing-page{
     height:100vh;
     width:100vw;
-    background-image: url("./assets/ss_landing_page.png");
+    background-image: url("./assets/movies.png");
     background-size: cover;
-position:relative;
 font-family: Arial, Helvetica, sans-serif;
+display:flex;
+justify-content: center;
+align-items: center;
+overflow:hidden;
 }
-body{
-    overflow:hidden
-}
+
 .view{
     color:white;
     background-color: transparent;
     padding:1em;
     border:2px solid white;
     border-radius: 10px;
-    position:absolute;
-    top:3%;
-    left:80%;
+   
 }
 .view:hover{
     cursor:pointer;
  transform:scale(1.02);
  background-color: rgba(255, 255, 255, 0.233);
-}
-@media screen and (max-width:900px) {
-    .view{
-        left:70%;
-    }
-}
-@media screen and (max-width:400px) {
-    .view{
-        left:60%;
-        padding:0.5em;
-    }
 }
