--- a/src/components/main-section.css
+++ b/src/components/main-section.css
@@ -2,7 +2,7 @@
     display:flex;
     flex-direction: column;
     gap:1em;
-    background-color: rgb(0, 0, 0);
+    background-color: aliceblue;
 }
 .main-movie-section{
 display:grid;
