--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -4,4 +4,18 @@ footer{
 background-color: rgba(0, 0, 0, 0.247);
     position:sticky;
     bottom:0;
+    display:flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+footer img{
+    width:50px;
+    height:50px;
+}
+footer span{
+    font-size: 1em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
 }
