--- a/src/components/main-section.css
+++ b/src/components/main-section.css
@@ -10,3 +10,8 @@ grid-template-columns: auto;
 grid-row: auto;
 gap:2em;
 }
+@media screen and (max-width:900px){
+    .main-movie-section{
+        grid-template-columns: repeat(1,1fr);
+    }
+}
