--- a/src/components/movie-section.css
+++ b/src/components/movie-section.css
@@ -3,7 +3,7 @@
 display:grid;
 grid-template-columns: repeat(4,1fr);
 grid-template-rows:auto;
-
+gap:0.5em;
 }
 .movie-section-banner{
     display:flex;
