--- a/src/components/main-section.css
+++ b/src/components/main-section.css
@@ -13,5 +13,10 @@ gap:2em;
 @media screen and (max-width:900px){
     .main-movie-section{
         grid-template-columns: repeat(1,1fr);
+        overflow:hidden;
+    }
+    .image{
+        width:100%;
+        height:400px;
     }
 }
